--- a/IVS_Truong Tai Phat/ProductManagement/Views/Item/Item.cshtml
+++ b/IVS_Truong Tai Phat/ProductManagement/Views/Item/Item.cshtml
@@ -17,13 +17,6 @@
     </div>
 }
 
-@if (!string.IsNullOrEmpty((string)TempData["Success"]))
-{
-    <div id="success" class="danger">
-        @TempData["CountData"]
-    </div>
-}
-
 @if (!string.IsNullOrEmpty((string)TempData["Error"]))
 {
     <div id="error" class="error">
@@ -33,9 +26,9 @@
 @using (Html.BeginForm("Item", "Item", FormMethod.Get))
 {
     <div class="row vertical-align">
-        <div class="col-md-3">Item Code : @Html.TextBoxFor(m => m.Item.code, new { @class = "form-control" })</div>
-        <div class="col-md-3">Item Name : @Html.TextBoxFor(m => m.Item.name, new { @class = "form-control" })</div>
-        <div class="col-md-3">Category : @Html.DropDownListFor(m => m.Item.category_id, (SelectList)ViewBag.ListCategory, "", new { @class = "form-control", style = "width : 500px" })</div>
+        <div class="col-md-3">Item Code : @Html.TextBoxFor(m => m.Item.code, new { @class = "form-control", @PleaceHolder = "Item Code" })</div>
+        <div class="col-md-3">Item Name : @Html.TextBoxFor(m => m.Item.name, new { @class = "form-control", @PleaceHolder = "Item Name" })</div>
+        <div class="col-md-3">Category : @Html.DropDownListFor(m => m.Item.category_id, (SelectList)ViewBag.ListCategory, "Please Select", new { @class = "form-control", style = "width : 500px" })</div>
 
         <div class="col-md-3 vcenter">
             <button type="submit" class="btn btn-danger">Search</button>
